feat: update index.html, style.css and script.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Simulador de Expressões Regulares</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-</head>
+</head> 
 <body>
     <h1>Simulador de Expressões Regulares</h1>
 
@@ -18,5 +18,10 @@
         <label for="texto">Texto:</label>
         <input type="text" id="texto">
     </div>
+
+    <div class="campo">
+        <span id="status"></span>
+    </div>
+
 </body>
 </html>
